--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mysql2": "^3.2.0",
-        "sequelize": "^6.29.0",
         "serverless-http": "^3.1.1",
         "serverless-mysql": "^1.5.4"
     }
